Move library unit tests into their own module.
Along with disabling error prone for unit tests,
cuts build time by ~20s down to ~1min 40s.